syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

import "api/v1/data.proto";

option go_package = "dishes/order-dishes/api/v1";

service OrdersService {
  rpc CreateOrders (CreateOrdersRequest) returns (CreateOrdersResponse) {
    option (google.api.http) = {
      post: '/api/v1/order/create',
      body: '*'
    };
  }

  rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse) {
    option (google.api.http) = {
      get: '/api/v1/order/get/{id}',
    };
  }

  rpc DelOrders (DelOrdersRequest) returns (DelOrdersResponse) {
    option (google.api.http) = {
      delete: '/api/v1/order/delete/{id}',
    };
  }

  rpc UpdateOrders (UpdateOrdersRequest) returns (UpdateOrdersResponse) {
    option (google.api.http) = {
      put: '/api/v1/order/update',
      body: '*'
    };
  }

  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: '/api/v1/order/list',
    };
  }
}

message UpdateOrdersResponse{
  Order order = 1;
}

message UpdateOrdersRequest{
  string id = 1  [(validate.rules).string.min_len = 1];
  string dish_id = 2 [(validate.rules).string.min_len = 1];
  OrderStatus status = 3;
}

message DelOrdersResponse{
}

message DelOrdersRequest{
  string id = 1 [(validate.rules).string.min_len = 0];
}

message GetOrdersRequest{
  string id = 1 [(validate.rules).string.min_len = 1];
}

message GetOrdersResponse{
  Order order = 1;
}

message ListOrdersResponse{
  repeated Order orders = 1;
  int64 total = 2;
}

message ListOrdersRequest{
  string name = 1;
  int64 page_index = 888 [(validate.rules).int64.gt = 0];
  int64 page_size = 889 [(validate.rules).int64.gte = 1];
}

message CreateOrdersRequest {
  string dish_id = 1 [(validate.rules).string.min_len = 1];
  string remake = 2;
}

message CreateOrdersResponse{
    Order order = 1;
}
